syntax = "proto3";

option go_package = "proto";
package assess;

message DemoReq {
  string hello = 1;
}

message DemoRsp {
  string reply = 1;
}

message OverviewReq {
  string start_date = 1;
  string end_date = 2;
  int32  algo_type = 3;
}

message OverVewRsp {
  int32 code = 1;
  string msg = 2;
  repeated Data data = 3;
  message  Data {
    string algo_name = 1;
    int32 assess_type = 2;
    repeated Info info = 3;
    message Info {
      string date = 1;
      float score = 2;
    }
  }
}

service Assess {
  rpc GetDemo (DemoReq) returns (DemoRsp);
  rpc GetOverview (OverviewReq) returns (OverVewRsp);
}